# zed-cuda-seg

./: CMakeLists.txt  README.md
src/: main.cpp
